--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ gas-report.txt
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+deployments
